installed-tests: Avoid usage of GI_TYPELIB_PATH to override lookups

As of gobject-introspection bd475c00d96, this environment variable won't
override the search paths set through g_irepository_prepend_search_path,
so use this function in tests, ensuring that it overrides search paths
added internally by the GjsContext.

https://bugzilla.gnome.org/show_bug.cgi?id=765905